fixed token errors
